--- a/assets/style.css
+++ b/assets/style.css
@@ -34,20 +34,54 @@ header {
     gap: 2rem;
 }
 
+.main__title {
+    margin-bottom: -50px;
+    text-align: left; 
+}
+
+/* inputs: text box and add button */
 .inputs__container {
     display: flex;
     justify-content: space-between;
     width: 50vw;
+    align-items: center;
+    border-radius: 1.25rem;
+    padding: 1rem;
 
 }
 
 .input {
-    border-radius: 20px;
-    height: 30px;
+    border-radius: 10px;
+    padding: 15px;
     width: 85%;
+    background-color: var(--b2-lavender);
+    border-color: var(--b1-alice-blue);
+    font-family: inherit;
+    font-size: 1rem;
+    height: 2.2rem;
+
+}
+
+.btnAdd:hover {
+    cursor: pointer;
 }
 
 .btnAdd {
+    justify-content: space-around;
+    border-radius: 10px;
+    background-color: var(--b2-lavender);
+    border-color: var(--b6-dark-blue);
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    color: var(--b6-dark-blue);
+    font-family: inherit;
+    font-size: 1rem;
+    height: 2.2rem;
+
+}
+
+.btnAdd > img {
     height: 30px;
 }
 
@@ -91,6 +125,7 @@ header {
     background-color: #3D426B;
     color: var(--b1-alice-blue);
 }
+
 
 /* reponsivity */
 @media only screen and (max-width: 600px) {
