Changes on add button: fix some margin problems, adds style animation on :hover and :active.

--- a/assets/style.css
+++ b/assets/style.css
@@ -63,6 +63,8 @@ header {
 }
 
 .btnAdd:hover {
+    background-color: var(--b1-alice-blue);
+    color: var(--b6-dark-blue);
     cursor: pointer;
 }
 
@@ -78,11 +80,18 @@ header {
     font-family: inherit;
     font-size: 1rem;
     height: 2.2rem;
+    padding: 15px;
+    text-align: center;
+    line-height: normal;
+}
 
+.btnAdd:active {
+    background-color: var(--b6-dark-blue);
+    color: var(--b3-web);
 }
 
 .btnAdd > img {
-    height: 30px;
+    height: 25px;
 }
 
 .list {
@@ -126,6 +135,10 @@ header {
     color: var(--b1-alice-blue);
 }
 
+.delete:hover {
+    background-color: var(--b1-alice-blue);
+    color: var(--b6-dark-blue);
+}
 
 /* reponsivity */
 @media only screen and (max-width: 600px) {
